<?xml version="1.0"?>
<package format="2">
  <name>nav_msgs_rtmros_bridge</name>
  <version>0.0.0</version>
  <description>The nav_msgs_rtmros_bridge package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rtmbuild</depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
</package>
